--- a/jee/WebContent/index.html
+++ b/jee/WebContent/index.html
@@ -67,7 +67,7 @@
 
 <div id="nav">
 	<ul>
-		<li class="active"><a href="member/memberController.html">회원관리</a></li>
+		<li class="active"><a href="member2/memberController.html">회원관리</a></li>
 		<li ><a href="grade/gradeController.html">성적관리</a></li>
 		<li ><a href="bank/bankController.html">계좌관리</a></li>
 		<li ><a href="global/school_info.html">학교소개</a></li>
